[gd_scene load_steps=8 format=3 uid="uid://c2bkkykp0sajo"]

[ext_resource type="Script" path="res://root.gd" id="1_7hbtw"]
[ext_resource type="Script" path="res://Buttons/menubar.gd" id="1_38hau"]
[ext_resource type="Script" path="res://WallsPanel/walls_panel.gd" id="3_10dl3"]
[ext_resource type="Script" path="res://Graphics/grid_generator.gd" id="3_dpsan"]
[ext_resource type="PackedScene" uid="uid://0k5vbnv4udth" path="res://WallDialog/wall_dialog.tscn" id="4_s4300"]
[ext_resource type="Script" path="res://Graphics/wall_drawer.gd" id="5_gh4vr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sx7q6"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.230315, 0.230315, 0.230315, 1)

[node name="Root" type="Node2D"]
script = ExtResource("1_7hbtw")

[node name="Menubar" type="Node2D" parent="."]
script = ExtResource("1_38hau")

[node name="LoadButton" type="Button" parent="Menubar"]
offset_right = 90.0
offset_bottom = 31.0
text = "Load Level"

[node name="LoadFileDialog" type="FileDialog" parent="Menubar/LoadButton"]
title = "Load Level"
initial_position = 1
size = Vector2i(700, 500)
ok_button_text = "Open"
mode_overrides_title = false
file_mode = 0
access = 2

[node name="SaveButton" type="Button" parent="Menubar"]
offset_left = 90.0
offset_right = 179.0
offset_bottom = 31.0
text = "Save Level"

[node name="SaveFileDialog" type="FileDialog" parent="Menubar/SaveButton"]
title = "Save Level"
initial_position = 1
size = Vector2i(700, 500)
ok_button_text = "Save"
access = 2

[node name="NewWallButton" type="Button" parent="Menubar"]
offset_left = 179.0
offset_right = 260.0
offset_bottom = 31.0
text = "New Wall
"

[node name="WallsPanel" type="PanelContainer" parent="."]
offset_top = 32.0
offset_right = 350.0
offset_bottom = 532.0
theme_override_styles/panel = SubResource("StyleBoxFlat_sx7q6")

[node name="ScrollContainer" type="ScrollContainer" parent="WallsPanel"]
layout_mode = 2

[node name="WallContainerBox" type="BoxContainer" parent="WallsPanel/ScrollContainer"]
layout_mode = 2
vertical = true
script = ExtResource("3_10dl3")

[node name="GridGenerator" type="Node2D" parent="."]
position = Vector2(500, 300)
script = ExtResource("3_dpsan")

[node name="WallDrawer" type="Node2D" parent="."]
script = ExtResource("5_gh4vr")

[node name="WallDialog" parent="." instance=ExtResource("4_s4300")]
visible = false

[node name="MessageDialog" type="AcceptDialog" parent="."]

[connection signal="pressed" from="Menubar/LoadButton" to="Menubar" method="_on_load_button_pressed"]
[connection signal="file_selected" from="Menubar/LoadButton/LoadFileDialog" to="Menubar" method="_on_load_file_dialog_file_selected"]
[connection signal="pressed" from="Menubar/SaveButton" to="Menubar" method="_on_save_button_pressed"]
[connection signal="file_selected" from="Menubar/SaveButton/SaveFileDialog" to="Menubar" method="_on_save_file_dialog_file_selected"]
[connection signal="pressed" from="Menubar/NewWallButton" to="Menubar" method="_on_new_wall_button_pressed"]
[connection signal="confirmed" from="WallDialog" to="." method="_on_wall_dialog_confirmed"]
